test/errors/error1.base
Error: /Users/leonardo/Development/vult/vult/test/errors/error1.vult:2:3-4: Invalid left hand side of assignment
fun foo() {
   () = 1;
   ^
